# dotfiles

./: CHANGELOG.md  CLAUDE.md  README.md  flake.nix
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: check.yml  claude.yml
config/git/: .gitconfig
config/wezterm/: .wezterm.lua
darwin/: darwin.nix
docs/: FONTS.md  README.md  architecture.md  developer-guide.md  faq.md  tool-reference.md  user-guide.md
home/: fonts.nix  git.nix  home.nix  neovim.nix  shell.nix  ssh.nix  theme.nix  wezterm.nix  zellij.nix
hosts/AMAFCXNW09RYR/: default.nix
hosts/Mabroors-MacBook-Pro/: default.nix
hosts/nixos/: default.nix
lib/: mkSystem.nix
modules/dev/: go.nix  javascript.nix  python.nix  rust.nix
nixos/: configuration.nix  fonts.nix
scripts/: fix-fish-ssh.sh  fix-zellij-permissions.sh  rebuild.sh  test-ssh-zellij.sh  update.sh
secrets/: README.md  secrets.nix
templates/: README.md
templates/javascript/: flake.nix  package.json
templates/python/: flake.nix  pyproject.toml
templates/rust/: Cargo.toml  flake.nix
